# fast-sse-axum

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  _.md
assets/: index.html  sse_test.js
config/: app.prd.toml
src/: auth_middle.rs  event_compression.rs  lib.rs  log_tests.rs  log_wrapper.rs  main.rs  message_compression.rs  message_compression_tests.rs  message_package.rs  message_package_tests.rs  redis_pool.rs  redis_stream.rs  redis_tests.rs  response_builder.rs  sse_event_publish.rs  sse_service.rs  sse_tests.rs  tcp_configuration.rs
src/common/: config_loader.rs  config_loader_tests.rs  hmac_utils.rs  hmac_utils_tests.rs  mod.rs  sse_common.rs  sse_common_tests.rs
src/config/: app.dev.toml  app.prd.toml
